@@ -1,6 +1,6 @@
 package week_5.brad.pairs;
 
-import com.sun.tools.javac.util.List;
+import java.util.Arrays;
 
 /**
  * Created by betterfly
@@ -11,7 +11,6 @@ public class Solution {
         1. sort 해서 큰 값 정렬(DESC) : bubble sort
         2. arr[idx] > K 인 (K보다 큰 값) 루프
         3. arr[idx] - K 의 값이 array에 있는지 2차 검증(loop)또 돌거나, ArrayList로 처리하면 좋음
-
      */
     static int pairsResult(int[] A, int k){
         sort(A);  // 내림차순 정렬
@@ -20,7 +19,7 @@ public class Solution {
 
         while(idx < A.length-1){
             int temp = A[idx]-k;
-            if(List.of(A).contains(temp)){
+            if(Arrays.asList(A).contains(temp)){
                 cnt++;
             }
 
